[project]
name = "throttlekit"
version = "0.1.0"
description = "Fast asyncio-compatible token bucket rate limiter"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Roudrasekhar Majumder", email = "roudra25@gmail.com" }]
license = "MIT"
dependencies = [
    "typing-extensions>=4.0.0; python_version<'3.10'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]


[build-system]
requires = ["uv_build>=0.8.3"]
build-backend = "uv_build"

[tool.uv.build-backend]
name = "throttlekit"
path = "src"
packages = ["throttlekit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1"
]
