[project]
name = "throttlekit"
version = "0.2.0"
description = "Fast asyncio-compatible token bucket rate limiter"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Roudrasekhar Majumder", email = "roudra25@gmail.com" }]
license = "MIT"
dependencies = [
    "starlette>=1.3.1",
    "typing-extensions>=4.12.2; python_version<'3.10'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.136.3",
    "starlette>=1.3.1",
    "uvicorn>=0.22.0"
]
redis = [
    "redis>=8.0.0"
]
sql = [
    "SQLAlchemy>=2.0.50"
]


[build-system]
requires = ["uv_build>=0.8.3"]
build-backend = "uv_build"

[tool.uv.build-backend]
name = "throttlekit"
path = "src"
packages = ["throttlekit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "redis>=8.0.0",
    "SQLAlchemy>=2.0.50",
    "aiosqlite>=0.22.1",
    "uvicorn>=0.22.0"
]
